more work on backup and restore

--- a/git/formuladb-env/frmdb-apps/hotel-booking/_form.html
+++ b/git/formuladb-env/frmdb-apps/hotel-booking/_form.html
@@ -1,4 +1,4 @@
-<form class="frmdb-form-dark px-3" data-frmdb-record="RoomBooking~~" data-frmdb-record-no-autosave="" data-frmdb-fragment="_form.html" method="GET" action="booking.html">
+<form class="frmdb-form-dark px-3" data-frmdb-record="Room_Booking~~" data-frmdb-record-no-autosave="" data-frmdb-fragment="_form.html" method="GET" action="booking.html">
 <div class="row pt-3 pb-2">
     <div class="col-md-3">
         <h2 class="text-light">Book
@@ -10,7 +10,7 @@
             <div class="col-md-4">
                 <div class="form-group">
                     <div class="input-group date">
-                        <input type="date" class="form-control" placeholder="Arrival Date" required="" name="$FRMDB.RoomBooking[].start_date" data-frmdb-value="$FRMDB.RoomBooking[].start_date">
+                        <input type="date" class="form-control" placeholder="Arrival Date" required="" name="$FRMDB.Room_Booking[].start_date" data-frmdb-value="$FRMDB.Room_Booking[].start_date">
                         <div class="input-group-append">
                             <span class="input-group-text">
                                 <i class="frmdb-i-calendar" aria-hidden="true"></i>
@@ -20,7 +20,7 @@
                 </div>
                 <div class="form-group">
                     <div class="input-group date">
-                        <input type="date" class="form-control" placeholder="Departure Date" required="" name="$FRMDB.RoomBooking[].end_date" data-frmdb-value="$FRMDB.RoomBooking[].end_date">
+                        <input type="date" class="form-control" placeholder="Departure Date" required="" name="$FRMDB.Room_Booking[].end_date" data-frmdb-value="$FRMDB.Room_Booking[].end_date">
                         <div class="input-group-append">
                             <span class="input-group-text">
                                 <i class="frmdb-i-calendar" aria-hidden="true"></i>
@@ -32,12 +32,12 @@
             <div class="col-md-4">
                 <div class="form-group">
                     <div class="input-group">
-                        <input type="number" class="form-control" placeholder="Nb Adults" required="" max="4" name="$FRMDB.RoomBooking[].nb_adults" data-frmdb-value="$FRMDB.RoomBooking[].nb_adults">
+                        <input type="number" class="form-control" placeholder="Nb Adults" required="" max="4" name="$FRMDB.Room_Booking[].nb_adults" data-frmdb-value="$FRMDB.Room_Booking[].nb_adults">
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="input-group">
-                        <input type="number" class="form-control" title="Nb Children" value="0" name="$FRMDB.RoomBooking[].nb_children" data-frmdb-value="$FRMDB.RoomBooking[].nb_children">
+                        <input type="number" class="form-control" title="Nb Children" value="0" name="$FRMDB.Room_Booking[].nb_children" data-frmdb-value="$FRMDB.Room_Booking[].nb_children">
                     </div>
                 </div>
             </div>
